gotosocial cut off fix and documentation

--- a/home/home1.css
+++ b/home/home1.css
@@ -24,7 +24,6 @@
 #status {
   height: auto;
   min-height: 0;
-  overflow: hidden;
 }
   
 
@@ -53,7 +52,7 @@
 }
 
 #fedibox {
-  overflow: hidden;
+  overflow: visible;
   width: 100%;
   box-sizing: border-box;
 }
